# cfgfile

./: .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  COPYING  QtConfFile.pro  README  README.md  REUSE.toml  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  annotated_dup.js  build.rb  cfgfile-config.cmake.in  cfgfile.pro  classcfgfile_1_1constraint__min__max__t-members.html  classcfgfile_1_1constraint__min__max__t.html  classcfgfile_1_1constraint__min__max__t.js  classcfgfile_1_1constraint__min__max__t__coll__graph.map  classcfgfile_1_1constraint__min__max__t__coll__graph.md5  classcfgfile_1_1constraint__min__max__t__inherit__graph.md5  classcfgfile_1_1constraint__one__of__t-members.html  classcfgfile_1_1constraint__one__of__t.html  classcfgfile_1_1constraint__one__of__t.js  classcfgfile_1_1constraint__one__of__t__coll__graph.map  classcfgfile_1_1constraint__one__of__t__coll__graph.md5  classcfgfile_1_1constraint__one__of__t__inherit__graph.map  classcfgfile_1_1constraint__one__of__t__inherit__graph.md5  classcfgfile_1_1constraint__t-members.html  classcfgfile_1_1constraint__t.html  classcfgfile_1_1constraint__t.js  classcfgfile_1_1constraint__t__inherit__graph.map  classcfgfile_1_1constraint__t__inherit__graph.md5  classcfgfile_1_1details_1_1determine__format__t-members.html  classcfgfile_1_1details_1_1determine__format__t.html  classcfgfile_1_1details_1_1determine__format__t.js  (+482 more)
.github/workflows/: codeql-analysis.yml  coverity-scan.yml  testing.yml
.reuse/: dep5
QtConfFile/: CMakeLists.txt  ConstraintMinMax  ConstraintOneOf  QtConfFile.pro  TagNoValue  TagScalar  TagScalarVector  TagVectorOfTags  Utils  constraint_min_max.hpp  constraint_one_of.hpp  exceptions.cpp  exceptions.hpp  prj.rb  tag_no_value.cpp  tag_no_value.hpp  tag_scalar.hpp  tag_scalar_vector.hpp  tag_vector_of_tags.hpp  utils.cpp  utils.hpp
QtConfFile/private/: Constraint  Format  InputStream  Lex  Parser  Tag  (+18 more)
UnitTest/: unit_test.hpp
cfgfile/: all.hpp  cfgfile.pri  const.hpp  constraint.hpp  constraint_min_max.hpp  constraint_one_of.hpp  exceptions.cpp  exceptions.hpp  format.hpp  input_stream.cpp  input_stream.hpp  lex.cpp  lex.hpp  parser.cpp  parser.hpp  parser_info.cpp  parser_info.hpp  string_format.cpp  string_format.hpp  tag.cpp  tag.hpp  tag_no_value.cpp  tag_no_value.hpp  tag_scalar.hpp  tag_scalar_vector.hpp  tag_vector_of_tags.hpp  types.hpp  utils.cpp  utils.hpp
doc/: Doxyfile  QtConfFile_en.doc  QtConfFile_ru.doc  dsl.dox  mainpage.dox
example/: CMakeLists.txt  cfg.hpp  example.pri  example.pro  main.cpp
example/generator/: CMakeLists.txt  example.cfgfile  example.qtconffile  generator.pro  main.cpp
example/xml/: CMakeLists.txt  cfg.cpp  cfg.hpp  main.cpp  xml.pro
generator/: CMakeLists.txt  README  cfg.cpp  cfg.hpp  generator.cpp  generator.hpp  generator.pro  main.cpp
generator/cfg/: CMakeLists.txt  cfg.cpp  cfg.hpp  cfg.pro
generator/generator/: CMakeLists.txt  generator.cpp  generator.hpp  generator.pro  main.cpp
html/: all_8hpp.html  annotated.html  classcfgfile_1_1constraint__min__max__t-members.html  classcfgfile_1_1constraint__one__of__t-members.html  classcfgfile_1_1constraint__t-members.html  classcfgfile_1_1details_1_1determine__format__t.html  classcfgfile_1_1details_1_1parser__base__t.html  classcfgfile_1_1details_1_1parser__conffile__impl__t-members.html  classcfgfile_1_1details_1_1parser__conffile__impl__t.html  classcfgfile_1_1details_1_1parser__dom__impl__t-members.html  classcfgfile_1_1exception__t-members.html  classcfgfile_1_1exception__t.html  classcfgfile_1_1input__stream__t-members.html  classcfgfile_1_1input__stream__t.html  classcfgfile_1_1lexeme__t-members.html  classcfgfile_1_1lexeme__t.html  classcfgfile_1_1lexical__analyzer__t-members.html  classcfgfile_1_1parser__info__t-members.html  classcfgfile_1_1parser__info__t.html  classcfgfile_1_1parser__t-members.html  classcfgfile_1_1parser__t.html  classcfgfile_1_1tag__no__value__t.html  classcfgfile_1_1tag__scalar__t-members.html  classcfgfile_1_1tag__scalar__t_3_01_q_string_00_01_trait_01_4.html  classcfgfile_1_1tag__scalar__vector__t-members.html  classcfgfile_1_1tag__t-members.html  constraint__min__max_8hpp.html  constraint__min__max_8hpp_source.html  constraint__one__of_8hpp.html  dsl.html  exceptions_8hpp.html  format_8hpp.html  format_8hpp_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  lex_8hpp_source.html  (+12 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+50 more)
test/: test.pro
tests/: test.pri
tests/auto/BoolScalar/: BoolScalar.pro  CMakeLists.txt  all_is_ok_with_1_and_0.cfg  all_is_ok_with_on_and_off.cfg  all_is_ok_with_true_and_false.cfg  cfg.cpp  cfg.hpp  false_instead_of_true.cfg  invalid_value.cfg  main.cpp
tests/auto/Complex/: CMakeLists.txt  Complex.pro  all_is_ok.cfg  all_is_ok_with_comments.cfg  cfg.cpp  cfg.hpp  inconsistency_to_int_constraint.cfg  inconsistency_to_string_constraint.cfg  main.cpp  undefined_child_mandatory_tag.cfg  undefined_mandatory_tag.cfg  xml.cfg
tests/auto/Format/: CMakeLists.txt  Format.pro  main.cpp
tests/auto/Generator/: CMakeLists.txt  Generator.pro  custom.hpp  main.cpp  test.cfg  test.cfgfile
tests/auto/InputStream/: CMakeLists.txt  InputStream.pro  main.cpp
tests/auto/LexicalAnalyzer/: CMakeLists.txt  LexicalAnalyzer.pro  main.cpp
tests/auto/Parser/: CMakeLists.txt  Parser.pro  main.cpp
tests/auto/QtGenerator/: CMakeLists.txt  QtGenerator.pro  custom.hpp  main.cpp  test.cfg  test.cfgfile  test1.cfg  test2.cfg
tests/auto/QtParser/: CMakeLists.txt  QtParser.pro  main.cpp
(+166 files in other folders)
